<resources>
<!--    <string name="app_name">Courier Locker</string>-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Courier Locker</string>
    <string name="nav_header_subtitle">Made with ♥ by lmj0011</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="exporting_app_data_starting">exporting app data...</string>
    <string name="exported_app_data_successfully">app data successfully exported.</string>
    <string name="importing_app_data_starting">importing from backup file...</string>
    <string name="imported_app_data_successfully">app data successfully imported, now restarting app.</string>

    <!-- notifications -->
    <string name="notification_action_button_cancel">Cancel</string>
    <string name="notification_calculate_all_trip_distance">calculating trip distances</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_gate_codes">Gate Codes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_customers">Customers</string>
    <string name="menu_maps">Maps</string>

    <!-- Preference Keys -->
    <string name="pref_key_map_feed_list">pref_key_map_feed_list</string>
    <string name="pref_enable_current_status_service">pref_enable_current_status_service</string>
    <string name="pref_google_map_type">pref_google_map_type</string>
    <string name="pref_key_mode_night">PREF_MODE_NIGHT</string>

    <string name="pref_gate_codes_is_ordered_by_nearest">pref_gate_codes_is_ordered_by_nearest</string>
    <string name="pref_maps_is_ordered_by_nearest">pref_maps_is_ordered_by_nearest</string>

    <string name="pref_dev_options_enabled">pref_dev_options_enabled</string>
    <string name="pref_dev_controls_enabled">pref_dev_controls_enabled</string>
    <string name="pref_key_bounding_coordinates_distance">pref_key_bounding_coordinates_distance</string>
    <string name="pref_google_directions_api_key">pref_google_directions_api_key</string>

    <!-- Preference Summaries -->
    <string name="pref_bounding_coordinates_distance_summary">Increase or decrease the radius (in miles) of the bounding box used for address suggestions</string>
    <string name="pref_enable_current_status_service_summary">Launch a Notification group that displays today\'s earnings, recent trips, and nearby gate codes whenever the app goes into the background.</string>

    <!-- Preference Titles -->
    <string name="pref_bounding_coordinates_distance_title">Bounding Box Radius (%1$s)</string>
    <string name="pref_bounding_coordinates_distance_dialog_title">Enter New Value</string>
    <string name="pref_enable_current_status_service_title">Current Status Service</string>
    <string name="pref_display_category_title">Display</string>

    <!-- Intent Extra Keys-->
    <string name="intent_extra_key_worker_tags">WORKER_TAGS</string>

    <!--  Unique Worker Tags/Names  -->
    <string name="calculate_all_trip_distance_one_time_worker_tag">CALCULATE_ALL_TRIP_DISTANCE_ONE_TIME_WORKER_TAG</string>
    <string name="create_app_backup_one_time_worker_tag">CREATE_APP_BACKUP_ONE_TIME_WORKER_TAG</string>
    <string name="create_app_backup_one_time_worker">CREATE_APP_BACKUP_ONE_TIME_WORKER</string>
    
    <string name="shortcut_trips">name.lmj0011.courierlocker.shortcut_trips</string>
    <string name="shortcut_maps">name.lmj0011.courierlocker.shortcut_maps</string>
    <string name="shortcut_gatecodes">name.lmj0011.courierlocker.shortcut_gatecodes</string>
    <string name="shortcut_customers">name.lmj0011.courierlocker.shortcut_customers</string>



    <string name="gig_label_visibility">Toggle visibility of this gig label</string>
    <string name="creating_app_backup">Creating App Backup</string>
    <string name="start_address">start address</string>
    <string name="end_address">end address</string>
    <string name="pay">pay</string>
    <string name="gig">gig</string>
    <string name="miles">miles</string>
    <string name="number_of_stops">Number of stops</string>
    <string name="trip_payment">Trip payment</string>
    <string name="total_distance">Total distance</string>
    <string name="trip_start_time">Trip start time</string>
    <string name="add_to_home_screen">Add to Home Screen</string>
    <string name="cant_pinned_shortcuts">The current Launcher does not support pinned Shortcuts</string>
    <string name="gatecodes_selectable_map_list">Select a Map to associate with this GateCode list</string>
    <string name="building_navigation_list">Swipe left on a Building, then tap \"Directions\"</string>
    <string name="display_in_a_bubble">Display in a Bubble</string>
    <string name="calculated_trip_error_message">Error calculating Trip distance, is the Directions api key valid?</string>
</resources>
