<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:key="preferenceScreen">

    <PreferenceCategory
            app:key="servicesCategory"
            app:title="@string/pref_enable_current_status_service_title">

        <SwitchPreferenceCompat
                app:key="@string/pref_enable_current_status_service"
                app:summary="@string/pref_enable_current_status_service_summary"
                app:defaultValue="true"/>

        <SwitchPreferenceCompat
                app:key="showCurrentStatusAsBubble"
                app:title="@string/display_in_a_bubble"
                app:defaultValue="false"
                app:isPreferenceVisible="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="displayCategory"
        app:title="@string/pref_display_category_title">

        <ListPreference
            android:key="@string/pref_key_mode_night"
            android:title="Change Theme"
            app:defaultValue="dark"
            app:useSimpleSummaryProvider="true"
            android:entries="@array/app_theme_list_entries"
            android:entryValues="@array/app_theme_list_entry_values" />

    </PreferenceCategory>

    <PreferenceCategory
            app:key="backupCategory"
            app:title="Backup">

        <Preference
                app:key="createBackup"
                app:title="Create Backup"
                app:summary="Export app data to a backup file">
        </Preference>

        <Preference
                app:key="restoreBackup"
                app:title="Restore Backup"
                app:summary="Restore app data from a backup file">
        </Preference>

        <SwitchPreferenceCompat
                app:key="enableAutomaticBackups"
                app:title="Enable Automatic Backups"
                app:summary="Begin producing daily backup files"
                app:defaultValue="false"/>

        <Preference
                app:key="automaticBackupLocation"
                app:title="Automatic Backup Location"
                app:isPreferenceVisible="false">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
            app:key="advancedCategory"
            app:title="Advanced">

        <SwitchPreferenceCompat
                app:key="sendCrashReports"
                app:title="Send crash reports"
                app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="AboutCategory"
        app:title="About">

        <Preference
            app:key="appVersion"
            app:title="Version">
        </Preference>

        <Preference
            app:key="appBuild"
            app:title="Build">
        </Preference>

        <Preference
            app:key="appChangelog"
            app:title="Changelog">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
            app:key="debugCategory"
            app:title="Developer Options">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/pref_dev_options_enabled"
            app:title="Enable Developer Options" />

        <SwitchPreferenceCompat
                app:defaultValue="false"
                app:key="@string/pref_dev_controls_enabled"
                app:title="Enable Debug Controls" />

        <EditTextPreference
                app:key="@string/pref_key_bounding_coordinates_distance"
                app:title=""
                app:summary="@string/pref_bounding_coordinates_distance_summary"
                app:dialogTitle="@string/pref_bounding_coordinates_distance_dialog_title" />

        <EditTextPreference
            app:key="@string/pref_google_directions_api_key"
            app:title="Directions API key"
            app:dialogTitle="Enter Directions API key" />

    </PreferenceCategory>

</PreferenceScreen>