<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_trips"
        android:icon="@drawable/ic_menu_trips"
        android:title="Trips"/>

    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_maps"/>

    <item
        android:id="@+id/nav_add_new"
        android:icon="@drawable/ic_add"
        android:title=""/>

    <item
        android:id="@+id/nav_gate_codes"
        android:icon="@drawable/ic_menu_dialpad"
        android:title="@string/menu_gate_codes"/>

    <item
        android:id="@+id/nav_customers"
        android:icon="@drawable/ic_menu_customer"
        android:title="@string/menu_customers"/>
</menu>
