<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="trip" type="name.lmj0011.courierlocker.database.Trip"/>
        <variable name="clickListener" type="name.lmj0011.courierlocker.adapters.TripListAdapter.TripListener"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> clickListener.onClick(trip)}"
            android:padding="@dimen/default_list_item_padding_8dp">

        <TextView
                android:id="@+id/tripDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tripGigTextView"
                tools:text="09/12/19"
                android:tooltipText="@string/trip_start_time" />

        <TextView
                android:id="@+id/tripPickupAddressTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/start_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tripDropoffAddressTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/end_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tripPickupAddressTextView" />

        <TextView
                android:id="@+id/tripDistanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_timeline_24"
                android:text="@string/miles"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tripDropoffAddressTextView" />

        <TextView
                android:id="@+id/tripPayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                android:text="@string/pay"
                app:layout_constraintStart_toEndOf="@+id/tripDistanceTextView"
                app:layout_constraintTop_toBottomOf="@+id/tripDropoffAddressTextView" />

        <TextView
                android:id="@+id/tripGigTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_menu_trips"
                android:text="@string/gig"
                app:layout_constraintStart_toEndOf="@+id/tripPayTextView"
                app:layout_constraintTop_toBottomOf="@+id/tripDropoffAddressTextView" />

        <TextView
                android:id="@+id/multipleStopTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_multiple_stop_24"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/tripGigTextView"
                app:layout_constraintTop_toBottomOf="@+id/tripDropoffAddressTextView"
                tools:text="3"
                tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>