<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressBar"
                style="@style/Widget.MaterialComponents.LinearProgressIndicator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:indicatorColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/quickStatusContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mtrl_card_spacing"
                app:strokeWidth="1dp"
                app:strokeColor="@color/colorDefaultIcon"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.MaterialCardView.Cut">

            <TextView
                    android:id="@+id/quickStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mtrl_card_spacing"
                    android:text="0.00 | 0"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="$0.00 | 0" />
        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quickStatusContainer">

            <TextView
                    android:id="@+id/recentTripsHeaderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Recent Trips"
                    android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/recentTripsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="@dimen/default_list_item_padding_8dp">

                <TextView
                    android:id="@+id/tripPickupAddressTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:singleLine="true"
                    android:text="@string/start_address"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tripDropoffAddressTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:singleLine="true"
                    android:text="@string/end_address"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tripPickupAddressTextView" />

                <TextView
                        android:id="@+id/tripPayTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:drawableStartCompat="@drawable/ic_baseline_attach_money_24"
                        android:text="@string/pay"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tripDropoffAddressTextView" />

                <TextView
                        android:id="@+id/tripGigTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/gig"
                        app:layout_constraintStart_toEndOf="@+id/tripPayTextView"
                        app:layout_constraintTop_toBottomOf="@+id/tripDropoffAddressTextView"
                        app:drawableStartCompat="@drawable/ic_menu_trips" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/recentTripsControlsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_list_item_padding_8dp">

                <Button
                    android:id="@+id/addStopButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Stop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <Button
                    android:id="@+id/newTripButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="New Trip"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/addStopButton"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/nextTripImageButton"
                    style="@android:style/Widget.DeviceDefault.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_green_outlined_button"
                    android:padding="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_green_baseline_arrow_forward_ios_24"
                    android:contentDescription="Next Trip"
                    tools:ignore="SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                    style="@style/Divider"
                    android:layout_marginEnd="100dp" />

            <TextView
                    android:id="@+id/nearestAddressableHeaderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Nearby Gate Codes and Maps"
                    android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nearestAddressableContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/default_list_item_padding_8dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/addressableNameTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="#1212" />

                <TextView
                    android:id="@+id/addressableAddressTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addressableNameTextView"
                    tools:text="Joey Diaz Ave." />

                <TextView
                    android:id="@+id/gateCodesTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addressableAddressTextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nearestAddressableControlsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_list_item_padding_8dp"
                android:visibility="visible">

                <Button
                    android:id="@+id/openMapButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="Open Map"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buildingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="Buildings"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/openMapButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/nextAddressableImageButton"
                    style="@android:style/Widget.Material.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_green_outlined_button"
                    android:padding="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_green_baseline_arrow_forward_ios_24"
                    android:contentDescription="Next Map"
                    tools:ignore="SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>